	Add pref for creating a dummy alsa MIDI output port.
	Add "OMC notify" to MIDI mapper (MIDI -> OSC, sends USER1 notify event to all listeners).
	Code cleanup. Standard checkbuttons and check menuitems now have their state set in the creation function.
	Remove "use_mnemonic" parameter for widget functions. Use widget_opts.mnemonic_labels instead. (in progress)
	Amend the autolives toy so it can be triggered via OSC (TODO).
	MIDI channel can now used as a filter instead of a parameter to be matched (TODO).
	Device mappings can now be shipped with builds (TODO).
	Improved a/v synch with pulse audio.
	Correct some minor GUI issues.
	




Version 2.8.9 (15 March 2018)
-----------------------------
Fix dataloss and crash issues from 2.8.8




Version 2.8.8 (10 March 2018)
-----------------------------
Fix "undo render to same clip" after rendering to selection.
Add new libav_stream playback plugin (WIP).
Set openGL playback plugin (if present) as the default for new installs.
(Multi monitor support) always show dialog windows on the gui monitor.
Re-enable audio recording from external sources (was inadvertantly disabled).
Fix possible problems with layout reloading (regression).
Reset to correct playback position when stop is pressed during / after pause (multitrack),
Increase size of playback area in multitrack mode.
Increase preview window size for video part open.
Add quick transcode menu option (beta).
Keep showing framebar when not playing (can be overriden in prefs).
Show audio source in framebar (overridden by pref).
Optimise redrawing of audio waveforms in clip editor.
Implement external audio trigger for recording.
Theme fixes for buttons.
Various optimisations.
Scale many widget sizes based on screen resolution.
Fix crash in multitrack parameter adjustment for effects with repeated channels.
Ctrl + mouse scroll can be used to zoom in / out in multitrack.
Disable ctrl-q (quit) accelerator during playback to prevent accidental triggering.
Updates for libav 3.5.